@@ -2659,7 +2659,7 @@ int WINAPI SetMetaRgn(HDC);
 BOOL WINAPI SetMiterLimit(HDC,FLOAT,PFLOAT);
 UINT WINAPI SetPaletteEntries(HPALETTE,UINT,UINT,const PALETTEENTRY*);
 COLORREF WINAPI SetPixel(HDC,int,int,COLORREF);
-BOOL WINAPI SetPixelFormat(HDC,int,PIXELFORMATDESCRIPTOR*);
+BOOL WINAPI SetPixelFormat(HDC,int,const PIXELFORMATDESCRIPTOR*);
 BOOL WINAPI SetPixelV(HDC,int,int,COLORREF);
 int WINAPI SetPolyFillMode(HDC,int);
 BOOL WINAPI SetRectRgn(HRGN,int,int,int,int);
